--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,24 @@
     background-repeat: no-repeat;
 }
 
+.fondo-principal{
+  background-color: #a2a2a2 !important;
+}
+
+
+
+.logo{
+  width: 20% !important;
+}
+
+.red{
+  background-color: red;
+}
+
+.linea{
+  text-decoration: underline;
+}
+
 .fondo-banner2 {
     background-image: url(../images/fondo-banner.jpg);
     width: 100%;
@@ -258,20 +276,20 @@ background-color: #1a363d;
 @media(min-width: 1024px){
 .fondo-transparente2 {
     background-color: #2c435099;
-    height: 100vh;
+    height: auto;
     padding: 20px 26px;
 }    
 .fondo-banner2 {
     background-image: url(../images/fondo-banner.jpg);
     width: 100%;
-    height: 110vh;
+    height: auto;
     background-size: cover;
     background-repeat: no-repeat;
 }
 .fondo-banner {
     background-image: url(../images/fondo-banner.jpg);
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-size: cover;
     background-repeat: no-repeat;
 }    
@@ -288,18 +306,18 @@ background-color: #1a363d;
 
 .fondo-transparente {
     background-color: #2c43507a;
-    height: 100vh;
+    height: auto;
 }
 .fondo-transparente2 {
     background-color: #2c435099;
-    height: 100vh;
+    height: auto;
     padding: 20px 33px;
 }
 
 .fondo-banner {
     background-image: url(../images/fondo-banner.jpg);
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -314,7 +332,7 @@ background-color: #1a363d;
 }
 .fondo-transparente3 {
     background-color: #20303adb;
-    height: 100vh;
+    height: auto;
     padding: 20px 28px;
 }
 
@@ -332,9 +350,7 @@ background-color: #1a363d;
 
 @media(min-width: 1440px){
 
-  .fila {
-    padding-top: 18%;
-}
+
 
 .fila2{
   padding-top: 5%;
@@ -361,9 +377,6 @@ background-color: #1a363d;
 
 @media(min-width: 1600px){
 
-  .fila {
-    padding-top: 13%;
-}
 
 .fila2 {
     padding-top: 9%;
@@ -386,7 +399,7 @@ background-color: #1a363d;
 @media(min-width: 1920px){
 .fondo-transparente2 {
     background-color: #2c435099;
-    height: 100vh;
+    height: auto;
     padding: 7% 5%;
 }
 
@@ -397,7 +410,7 @@ background-color: #1a363d;
 .fondo-banner {
     background-image: url(../images/fondo-banner.jpg);
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-size: cover;
     background-repeat: no-repeat;
 }
