Font awesome instalado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,10 @@ background-color: #1a363d;
   font-size: 40px;
 }
 
+.text-pequeno-1{
+  font-size: 36px;
+}
+
 .tex-mediano {
     font-size: 50px;
     font-weight: 700;
