Font awesome instalado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,11 @@ background-color: #1a363d;
   font-size: 40px;
 }
 
+.text-pequeno-0{
+  font-size: 44px;
+  font-weight: 800;
+}
+
 .text-pequeno-1{
   font-size: 40px;
   font-weight: 800;
