Font awesome instalado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,20 +363,24 @@ background-color: #1a363d;
 .text-pequeno-0{
   font-size: 44px;
   font-weight: 800;
+  margin: 0;
 }
 
 .text-pequeno-1 {
   font-size: 58px;
   font-weight: 800;
+  margin: 0;
 }
 .text-pequeno-2 {
   font-size: 26px;
   font-weight: 800;
+  margin: 0;
 }
 
 .text-pequeno-3{
   font-size: 24px;
   font-weight: 800;
+  margin: 0;
 }
 
 
