Font awesome instalado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,6 +370,7 @@ background-color: #1a363d;
   font-size: 58px;
   font-weight: 800;
   margin: 0;
+  margin-bottom: -21px;
 }
 .text-pequeno-2 {
   font-size: 26px;
