--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,6 +334,38 @@ background-color: #1a363d;
   font-weight: bold;
 }
 
+.text-pequeno-0{
+  font-size: 44px;
+  font-weight: 800;
+  margin: 0;
+  margin-bottom: -22px;
+  color: #555;
+}
+
+.text-pequeno-1 {
+
+  font-size: 58px;
+  font-weight: 800;
+  margin: 0;
+  margin-bottom: -10px;
+  color: #1a4b98;
+
+}
+.text-pequeno-2 {
+  font-size: 26px;
+  font-weight: 800;
+  margin: 0;
+  color: #555;
+}
+
+.text-pequeno-3{
+  font-size: 24px;
+  font-weight: 800;
+  margin: 0;
+}
+
+
+
 @media(min-width: 1024px){
 .fondo-transparente2 {
     background-color: #2c435099;
