--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,23 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+.whatsapp {
+  position:fixed;
+  width:60px;
+  height:60px;
+  bottom:40px;
+  right:40px;
+  background-color:#25d366;
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
+  font-size:30px;
+  z-index:100;
+}
 
+.whatsapp-icon {
+  margin-top:13px;
+}
 .text-name1{
   font-size: 28px !important;
 }
