ajuste en pagina video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,7 +392,8 @@ background-color: #1a363d;
 }
 
 .letra-sola{
-  font-size: 25px;
+     font-size: 35px;
+    margin-top: 36% !important;
 }
 
 .texto{
